--- a/My First App/My First App/Base.lproj/Main.storyboard
+++ b/My First App/My First App/Base.lproj/Main.storyboard
@@ -40,6 +40,10 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="MaxPixel.freegreatpicture.com-Play-Garden-Grass-Soccer-Football-Games-Football-1396740.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Bmt-zl-OGe">
+                                <rect key="frame" x="58" y="440" width="295" height="249"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -54,4 +58,7 @@
             <point key="canvasLocation" x="31.884057971014496" y="50.54347826086957"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MaxPixel.freegreatpicture.com-Play-Garden-Grass-Soccer-Football-Games-Football-1396740.jpg" width="2816" height="1880"/>
+    </resources>
 </document>
